# fractal

./: Cargo.toml  Makefile  README.md  fractal.py  requirements.txt
fractal/: __init__.py  py_fractal.py  shader_fractal.py  term_fractal.py
fractal/resources/: fractal.frag  fractal.vert
src/: lib.rs
